# company-intelligence-tool

./: .gitignore  .openclaude-profile.json  CLAUDE.md  README.md  _test_detectors.py  batch_generate.py  buynomics.json  cit  pyproject.toml  requirements.txt
.openclaude/inbox/: CURSOR_PROMPT.md  DONE.md  TASK.md
config/: companies.yaml  targets.yaml
data/: buynomics.json  rhenus.json
src/analysis/: __init__.py  __main__.py  benchmarks.py  edge_cases.py  engine.py  gaps.py  insights.py  layers.py  llm.py  prompts.py  report.py  revenue_estimator.py
src/analysis/gaps/: __init__.py  clusters.py  detectors.py  helpers.py  llm.py  models.py  orchestrator.py
src/cit/: __init__.py  _utils.py  api.py  batch.py  cli.py  companies.py  demo.py
src/data_collector/: cache.py  collect.py  crunchbase.py  edgar.py  hiring_signal.py  knowledge_graph.py  live_collector.py  market.py  reference.py  seed.py  wikipedia.py  yfinance_financials.py
src/integration/: __init__.py  openclaude_runner.py
src/output/: __init__.py  compare.py  dashboard.py  export_csv.py  export_md.py  export_pdf.py  html_report.py  index_page.py  models.py  render.py  theme.py
