[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "cit-intel"
version = "0.2.0"
description = "Company Intelligence Tool — reframing engine"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "yfinance>=0.2.40",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "litellm>=1.40.0",
    "rich>=13.7.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "fpdf2>=2.7.0",
]

# Use ./cit launcher from repo root (imports use src.* layout)

[tool.setuptools.packages.find]
where = ["src"]
